lab4 third commit

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -16,13 +16,15 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img alt="Brand" src="images/icons/logo.png" width="40px" height="40px"></a>
+            <a class="navbar-brand" href="#"><img alt="Brand" src="images/icons/logo.png" width="40px"
+                                                  height="40px"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,7 +36,8 @@
             </ul>
             <ul class="nav navbar-nav nav-pills navbar-right">
                 <li role="presentation" class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">My account <span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                       aria-expanded="true">My account <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="src/html/upload.html"><i class="fa fa-upload"></i>Upload</a></li>
                         <li><a href="src/html/myUpload.html"><i class="fa fa-photo"></i>My Photo</a></li>
@@ -90,43 +93,44 @@
 </div>
 
 <footer>
-        <div class="container">
-           <div class="row">
-              <div class="col-md-3">
-                 <p><a>使用条款</a></p>
-                        <p><a>隐私保护</a></p>
-                        <p><a>Cookie</a></p>
-              </div>
-              <div class="col-md-3">
-                 <p><a>关于</a></p>
-                 <p><a>联系我们</a></p>
-              </div>
-              <div class="col-md-3">
-                 <div>
-                    <img src="images/icons/wechat.png" width="40px" />
-                    <img src="images/icons/ins.png" width="40px" />
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <p><a>使用条款</a></p>
+                <p><a>隐私保护</a></p>
+                <p><a>Cookie</a></p>
+            </div>
+            <div class="col-md-3">
+                <p><a>关于</a></p>
+                <p><a>联系我们</a></p>
+            </div>
+            <div class="col-md-3">
+                <div>
+                    <img src="images/icons/wechat.png" width="40px"/>
+                    <img src="images/icons/ins.png" width="40px"/>
                 </div>
                 <div>
-                    <img src="images/icons/qq.png" width="40px" />
-                    <img src="images/icons/github.png" width="40px" />
+                    <img src="images/icons/qq.png" width="40px"/>
+                    <img src="images/icons/github.png" width="40px"/>
                 </div>
-                 </div>
-
-              <div class="col-md-3">
-                  <img src="images/wechat2DCode.jpg" width="60px"/>
-              </div>
             </div>
-           </div>
-        </div>
 
-        <div id="copyrightRow">
-           <div class="container">
-              <div class="row">
-                <p class="copyright">Copyright © 2019-2021 Web fundamental. All Rights Reserved. 备案号：沪BILIBILI备12138号-1</p>
-              </div>
-           </div>
+            <div class="col-md-3">
+                <img src="images/wechat2DCode.jpg" width="60px"/>
+            </div>
         </div>
-     </footer>
+    </div>
+    </div>
+
+    <div id="copyrightRow">
+        <div class="container">
+            <div class="row">
+                <p class="copyright">Copyright © 2019-2021 Web fundamental. All Rights Reserved.
+                    备案号：沪BILIBILI备12138号-1</p>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
